--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
     <h1><a target="_blank" href="./Ampara/page/index.html">Pagina inicial</a> <a target="_blank"
-            href="./Ampara/page/pages/aula-1.html">Aula 1</a></h1>
+            href="./Ampara/page/pages/aula-1.html">Aula 1</a><a target="_blank"
+            href="./Ampara/page/pages/conheca.html">conheca o curso</a></h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
