--- a/index.html
+++ b/index.html
@@ -14,12 +14,70 @@
 </head>
 
 <body>
-    <h1><a target="_blank" href="./Ampara/page/index.html">Pagina inicial</a> <br><a target="_blank"
-            href="./Ampara/page/pages/aula-1.html">Aula 1</a><br><a target="_blank"
-            href="./Ampara/page/pages/conheca.html">conheca o curso</a></h1>
+    <h1><a target="_blank" href="./Ampara/page/index.html">Moodle face</a><br><a target="_blank"
+            href="./Ampara/page/pages/conheca.html">conheca o curso</a> <br><a target="_blank"
+            href="./Ampara/page/pages/aula-1.html">Aula 1</a></h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
-
+    <!-- <section class="ampara d-block d-lg-none ">
+        <div class="container">
+            <div class="row mf-ampara-m">
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/conheca-o-curso-button-mob.svg" alt="mob-conheca-o-curso"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/aula-1-button-mob.svg" alt="mob-aula-1"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/aula-2-button-mob.svg" alt="mob-aula-2"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/aula-3-button-mob.svg" alt="mob-aula-3"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/aula-4-button-mob.svg" alt="mob-aula-4"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/aula-5-button-mob.svg" alt="mob-aula-5"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/aula-6-button-mob.svg" alt="mob-aula-6"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/encerramento-button-mob.svg" alt="mob-encerramento"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/avalie-o-curso-button-mob.svg" alt="mob-avalie-o-curso"></a>
+                </div>
+                <div class="col-11 mx-auto my-2 btn-efect">
+                    <a href="#" target="_blank"><img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/certificado-button-mob.svg" alt="mob-certificado"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="ampara d-none d-lg-block" style="margin-top: calc( 10% / (var(--ampara-aspect-ratio)));">
+        <div class="container">
+            <div class="row">
+                <div class="col-10 mx-auto mf-ampara">
+                    <div class="mx-auto">
+                        <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/linha-moodle-face.png" alt="moodle face linha">
+                    </div>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_conheca.svg" alt="web-conheca-o-curso"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_aula1.svg" alt="web-aula-1"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_aula2.svg" alt="web-aula-2"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_aula3.svg" alt="web-aula-3"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_aula4.svg" alt="web-aula-4"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_aula5.svg" alt="web-aula-5"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botoa_aula6.svg" alt="web-aula-6"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_encerramento.svg" alt="web-encerramento"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_avalie.svg" alt="web-avalie-o-curso"></a>
+                    <a target="_blank" href="#" alt=""> <img src="https://blocoa.org/cursos/draftfile.php/5/user/draft/970287970/botao_certificado.svg" alt="web-certificado"></a>
+    
+                </div>
+            </div>
+        </div>
+    </section> -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
