--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     <h1><a target="_blank" href="./Ampara/page/index.html">Moodle face</a><br><a target="_blank"
             href="./Ampara/page/pages/conheca.html">conheca o curso</a> <br><a target="_blank"
-            href="./Ampara/page/pages/aula-1.html">Aula 1</a></h1>
+            href="./Ampara/page/pages/aula-1.html">Aula 1</a><br><a target="_blank"
+            href="./Ampara/page/pages/aula-2.html">Aula 2</a></h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- <section class="ampara d-block d-lg-none ">
