--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1><a target="_blank" href="./Ampara/pages/cardapio.html">Cardapio</a><br><a target="_blank"
+    <h1><a target="_blank" href="./Ampara/page/pages/cardapio.html">Cardapio</a><br><a target="_blank"
             href="./Ampara/page/index.html">Moodle face</a><br>
         <a target="_blank" href="./Ampara/page/pages/conheca.html">conheca o curso</a> <br><a target="_blank"
             href="./Ampara/page/pages/aula-1.html">Aula 1</a><br><a target="_blank"
