--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             href="./Ampara/page/index.html">Moodle face</a><br>
         <a target="_blank" href="./Ampara/page/pages/conheca.html">conheca o curso</a> <br><a target="_blank"
             href="./Ampara/page/pages/aula-1.html">Aula 1</a><br><a target="_blank"
-            href="./Ampara/page/pages/aula-2.html">Aula 2</a>
+            href="./Ampara/page/pages/aula-2.html">Aula 2</a><br><a target="_blank"
+            href="./Ampara/page/pages/aula-3.html">Aula 3</a><br><a target="_blank"
+            href="./Ampara/page/pages/aula-4.html">Aula 4</a>
     </h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
