--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             href="./Ampara/page/pages/aula-1.html">Aula 1</a><br><a target="_blank"
             href="./Ampara/page/pages/aula-2.html">Aula 2</a><br><a target="_blank"
             href="./Ampara/page/pages/aula-3.html">Aula 3</a><br><a target="_blank"
-            href="./Ampara/page/pages/aula-4.html">Aula 4</a>
+            href="./Ampara/page/pages/aula-4.html">Aula 4</a><br><a target="_blank"
+            href="./Ampara/page/pages/aula-5.html">Aula 5</a><br><a target="_blank"
+            href="./Ampara/page/pages/aula-6.html">Aula 6</a>
     </h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
